--- a/Effigy/Effigy.Web/bin/Effigy.Web.dll.config
+++ b/Effigy/Effigy.Web/bin/Effigy.Web.dll.config
@@ -1,5 +1,111 @@
-﻿<?xml version="1.0"?>
-<appSettings>
-  <add key="PaymentHours" value="24"/>
-  <add key="EncryptionValue" value="Effigy123"/>
-</appSettings>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<!--
+  For more information on how to configure your ASP.NET application, please visit
+  http://go.microsoft.com/fwlink/?LinkId=169433
+  -->
+<configuration>
+
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+  </configSections>
+  <connectionStrings>
+    <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SNPLCPDB;user id=sa;password=sa123$;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SNPLCPDBConnection" connectionString="Data Source=SASWATGUPTA-PC;Initial Catalog=SNPLCPDB;User ID=sa;Password=sa123$;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <appSettings>
+    <add key="CoupneCodeLength" value="8"/>
+    <add key="SecurityKey" value="test" />
+    <add key="SMSUSERNAME" value="wwwmit" />
+    <add key="SMSPWD" value="1234567" />
+    <add key="SMSSENDERID" value="WWWMIT" />
+    <add key="SMSDOMAIN" value="smsby2.in" />
+    <add key="WEBSITENAME" value="www.test.com"/>
+    <add key="HELPDESKNO" value="12345678"/>
+    <add key="PaymentHours" value="24"/>
+    <add key="EncryptionValue" value="Effigy123"/>
+
+  </appSettings>
+  <system.web>
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
+    <pages>
+      <namespaces>
+        <add namespace="System.Web.Optimization" />
+      </namespaces>
+      <controls>
+        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+      </controls>
+    </pages>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login.aspx" timeout="2880" />
+    </authentication>
+    <profile defaultProvider="DefaultProfileProvider">
+      <providers>
+        <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
+      </providers>
+    </profile>
+    <membership defaultProvider="DefaultMembershipProvider">
+      <providers>
+        <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="DefaultRoleProvider">
+      <providers>
+        <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
+      </providers>
+    </roleManager>
+    <!--
+            If you are deploying to a cloud environment that has multiple web server instances,
+            you should change session state mode from "InProc" to "Custom". In addition,
+            change the connection string named "DefaultConnection" to connect to an instance
+            of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
+      -->
+    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+      <providers>
+        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
+      </providers>
+    </sessionState>
+  </system.web>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v11.0" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
+  <log4net>
+    <appender name="ErrorLog" type="log4net.Appender.RollingFileAppender">
+      <file value="LogBackUp\" />
+      <staticLogFileName value="false" />
+      <appendToFile value="true" />
+      <rollingStyle value="Date" />
+      <datePattern value="yyyy-MM-dd.'Err'" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%d{DATE} [%t] %-5p %c - %m%n" />
+      </layout>
+    </appender>
+    <logger name="ErrorLog">
+      <maximumFileSize value="15MB" />
+      <appender-ref ref="ErrorLog" />
+    </logger>
+  </log4net>
+  <system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer>
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <!-- Update this value to set the max length -->
+        <jsonSerialization maxJsonLength="2147483647" />
+      </webServices>
+    </scripting>
+  </system.web.extensions>
+</configuration>
