--- a/Effigy/Effigy.Web/bin/Effigy.Web.dll.config
+++ b/Effigy/Effigy.Web/bin/Effigy.Web.dll.config
@@ -11,8 +11,9 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <connectionStrings>
-    <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SNPLCPDB;user id=sa;password=sa123$;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SNPLCPDBConnection" connectionString="Data Source=SASWATGUPTA-PC;Initial Catalog=SNPLCPDB;User ID=sa;Password=sa123$;" providerName="System.Data.SqlClient" />
+	  <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VARNIKA-PC\SQLEXPRESS;initial catalog=SNPLCPDB;user id=sa;password=sa@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="SNPLCPDBConnection" connectionString="Data Source=VARNIKA-PC\SQLEXPRESS;Initial Catalog=SNPLCPDB;User ID=sa;Password=sa@123;" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="CoupneCodeLength" value="8"/>
