update nitin update to server

--- a/Effigy/Effigy.Entity/Effigy.Entity.csproj
+++ b/Effigy/Effigy.Entity/Effigy.Entity.csproj
@@ -117,6 +117,9 @@
     <Compile Include="DBContext\tblMstUserMaster.cs">
       <DependentUpon>SNPLCPDBModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DBContext\tblMstUserPaymentDetail.cs">
+      <DependentUpon>SNPLCPDBModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DBContext\tblMstUserTreeStructure.cs">
       <DependentUpon>SNPLCPDBModel.tt</DependentUpon>
     </Compile>
