--- a/Effigy/Effigy.Web/Effigy.Web.csproj
+++ b/Effigy/Effigy.Web/Effigy.Web.csproj
@@ -2321,6 +2321,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="CustomScript\PaymentGetway.js" />
     <Content Include="CustomScript\UserListPage.js" />
     <Content Include="CustomScript\BankMaster.js" />
     <Content Include="CustomScript\Dashboard.js" />
@@ -2667,6 +2668,10 @@
     <Content Include="EffigyMaster.Master" />
     <None Include="Properties\PublishProfiles\Effigy.Publish.pubxml" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
+    <Content Include="Payment\PaymentCancel.aspx" />
+    <Content Include="Payment\PaymentFailure.aspx" />
+    <Content Include="Payment\PaymentGetway.aspx" />
+    <Content Include="Payment\PaymentSuccess.aspx" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.js" />
@@ -2952,6 +2957,34 @@
     </Compile>
     <Compile Include="MasterPage\StateMaster.aspx.designer.cs">
       <DependentUpon>StateMaster.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Payment\PaymentCancel.aspx.cs">
+      <DependentUpon>PaymentCancel.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Payment\PaymentCancel.aspx.designer.cs">
+      <DependentUpon>PaymentCancel.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Payment\PaymentFailure.aspx.cs">
+      <DependentUpon>PaymentFailure.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Payment\PaymentFailure.aspx.designer.cs">
+      <DependentUpon>PaymentFailure.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Payment\PaymentGetway.aspx.cs">
+      <DependentUpon>PaymentGetway.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Payment\PaymentGetway.aspx.designer.cs">
+      <DependentUpon>PaymentGetway.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Payment\PaymentSuccess.aspx.cs">
+      <DependentUpon>PaymentSuccess.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Payment\PaymentSuccess.aspx.designer.cs">
+      <DependentUpon>PaymentSuccess.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControl\UC_UserProfile.ascx.cs">
