--- a/Effigy/Effigy.Web/Web.config
+++ b/Effigy/Effigy.Web/Web.config
@@ -24,8 +24,14 @@
     <add key="SMSDOMAIN" value="smsby2.in" />
     <add key="WEBSITENAME" value="www.test.com"/>
     <add key="HELPDESKNO" value="12345678"/>
-    <add key="PaymentHours" value="24"/>
+    <add key="PaymentHours" value="2000"/>
     <add key="EncryptionValue" value="Effigy123"/>
+    
+    <add key="MERCHANT_KEY" value="PzRAQOI9"/>
+    <add key="SALT" value="eAh1nC6o3P"/>
+    <add key="PAYU_BASE_URL" value="https://secure.payu.in"/>
+    <add key="action" value="http://traderzplanet.in/Payment/PaymentSuccess.aspx"/>
+    <add key="hashSequence" value="key|txnid|txtAmount|txtProductInfo|txtfirstName|txtEmail|txtUDF1|txtUDF2|txtUDF3|txtUDF4|txtUDF5|txtUDF6|txtUDF7|txtUDF8|txtUDF9|txtUDF10"/>
 
   </appSettings>
   <system.web>
