User profile image upload

--- a/Effigy/Effigy.Entity/Effigy.Entity.csproj
+++ b/Effigy/Effigy.Entity/Effigy.Entity.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Entity\MenuRenderByRole.cs" />
     <Compile Include="Entity\ClsStateMaster.cs" />
     <Compile Include="Entity\CountryMapper.cs" />
+    <Compile Include="Entity\MstBankData.cs" />
     <Compile Include="Entity\MstCityData.cs" />
     <Compile Include="Entity\MstStateData.cs" />
     <Compile Include="Entity\MstUserMaster.cs" />
