--- a/Effigy/Effigy.Web/Effigy.Web.csproj
+++ b/Effigy/Effigy.Web/Effigy.Web.csproj
@@ -2321,6 +2321,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="CustomScript\URLEntry.js" />
     <Content Include="CustomScript\PaymentGetway.js" />
     <Content Include="CustomScript\UserListPage.js" />
     <Content Include="CustomScript\BankMaster.js" />
@@ -2353,6 +2354,7 @@
     <Content Include="Images\orderedList7.png" />
     <Content Include="Images\orderedList8.png" />
     <Content Include="Images\orderedList9.png" />
+    <Content Include="Images\Spinner.gif" />
     <Content Include="Index.aspx" />
     <Content Include="Login.aspx" />
     <Content Include="LogOut.aspx" />
