Update url related changes

--- a/Effigy/Effigy.Service/Effigy.Service.csproj
+++ b/Effigy/Effigy.Service/Effigy.Service.csproj
@@ -45,8 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contract\IDataEntry.cs" />
     <Compile Include="Contract\IMasterService.cs" />
     <Compile Include="Contract\IUserService.cs" />
+    <Compile Include="Factory\DataEntry.cs" />
     <Compile Include="Factory\MasterService.cs" />
     <Compile Include="Factory\UserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
