--- a/Effigy/Effigy.Utility/Effigy.Utility.csproj
+++ b/Effigy/Effigy.Utility/Effigy.Utility.csproj
@@ -48,6 +48,7 @@
     <Compile Include="EmailBody.cs" />
     <Compile Include="ExtensionMethod.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="MailSMSHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SMSBody.cs" />
     <Compile Include="UtilityMethods.cs" />
