--- a/Effigy/Effigy.Web/Web.config
+++ b/Effigy/Effigy.Web/Web.config
@@ -11,8 +11,8 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <connectionStrings>
-	  <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SASWATGUPTA-PC;initial catalog=SNPLCPDB;user id=sa;password=sa123$;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	  <add name="SNPLCPDBConnection" connectionString="Data Source=SASWATGUPTA-PC;Initial Catalog=SNPLCPDB;User ID=sa;Password=sa123$;" providerName="System.Data.SqlClient" />
+    <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SASWATGUPTA-PC;initial catalog=SNPLCPDB;user id=sa;password=sa123$;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SNPLCPDBConnection" connectionString="Data Source=SASWATGUPTA-PC;Initial Catalog=SNPLCPDB;User ID=sa;Password=sa123$;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <appSettings>
@@ -26,13 +26,14 @@
     <add key="HELPDESKNO" value="12345678"/>
     <add key="PaymentHours" value="2000"/>
     <add key="EncryptionValue" value="Effigy123"/>
-    
     <add key="MERCHANT_KEY" value="PzRAQOI9"/>
     <add key="SALT" value="eAh1nC6o3P"/>
     <add key="PAYU_BASE_URL" value="https://secure.payu.in"/>
     <add key="action" value="http://traderzplanet.in/Payment/PaymentSuccess.aspx"/>
     <add key="hashSequence" value="key|txnid|txtAmount|txtProductInfo|txtfirstName|txtEmail|txtUDF1|txtUDF2|txtUDF3|txtUDF4|txtUDF5|txtUDF6|txtUDF7|txtUDF8|txtUDF9|txtUDF10"/>
-
+    <add key="FromMailID" value="tridev1983@outlook.com" />
+    <add key="ForgatPassword" value="Password Information" />
+    <add key="WelcomeNote" value="Copy Paste User welcome email" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -75,6 +76,14 @@
       </providers>
     </sessionState>
   </system.web>
+  <system.net>
+    <mailSettings>
+      <smtp from="tridev1983@outlook.com">
+        <!--<network host="125.210.189.244" password="" userName=""/>-->
+        <network host="smtp-mail.outlook.com" userName="tridev1983@outlook.com" password="Tridev@1983" port="587"  />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
