--- a/Effigy/Effigy.DataObject/Effigy.DataObject.csproj
+++ b/Effigy/Effigy.DataObject/Effigy.DataObject.csproj
@@ -63,6 +63,7 @@
     <Compile Include="GenericRepository\ClsBaseDAL.cs" />
     <Compile Include="GenericRepository\GenericRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitOfWork\ClsDALDataEntry.cs" />
     <Compile Include="UnitOfWork\ClsDALMaster.cs" />
     <Compile Include="UnitOfWork\clsDALUser.cs" />
     <Compile Include="UnitOfWork\UnityOfWork.cs" />
