--- a/Effigy/Effigy.Web/Web.config
+++ b/Effigy/Effigy.Web/Web.config
@@ -22,7 +22,7 @@
     <add key="SMSPWD" value="1234567" />
     <add key="SMSSENDERID" value="WWWMIT" />
     <add key="SMSDOMAIN" value="smsby2.in" />
-    <add key="WEBSITENAME" value="www.test.com"/>
+    <add key="WEBSITENAME" value="https://www.traderzplanet.com"/>
     <add key="HELPDESKNO" value="12345678"/>
     <add key="PaymentHours" value="2000"/>
     <add key="EncryptionValue" value="Effigy123"/>
