update required changes regarding auto role assignment.

--- a/Effigy/Effigy.Web/Web.config
+++ b/Effigy/Effigy.Web/Web.config
@@ -34,6 +34,7 @@
     <add key="FromMailID" value="tridev1983@outlook.com" />
     <add key="ForgatPassword" value="Password Information" />
     <add key="WelcomeNote" value="Copy Paste User welcome email" />
+    <add key="XMLPath" value="XMLFiles\CategoryRoleMapping.xml"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
