--- a/Effigy/Effigy.Web/Effigy.Web.csproj
+++ b/Effigy/Effigy.Web/Effigy.Web.csproj
@@ -2671,6 +2671,7 @@
     <Content Include="assets\locales\ru.json" />
     <Content Include="assets\locales\ua.json" />
     <Content Include="EffigyMaster.Master" />
+    <Content Include="XMLFiles\CategoryRoleMapping.xml" />
     <None Include="Properties\PublishProfiles\Effigy.Publish.pubxml" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Payment\PaymentCancel.aspx" />
