Update for URL Audit

--- a/Effigy/Effigy.Entity/Effigy.Entity.csproj
+++ b/Effigy/Effigy.Entity/Effigy.Entity.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Entity\ClsStateMaster.cs" />
     <Compile Include="Entity\CountryMapper.cs" />
     <Compile Include="Entity\MstBankData.cs" />
+    <Compile Include="Entity\UniqueURLMapper.cs" />
     <Compile Include="Entity\UrlEntriesVarifiedData.cs" />
     <Compile Include="Entity\MstCityData.cs" />
     <Compile Include="Entity\MstStateData.cs" />
