update privacy policy page

--- a/Effigy/Effigy.Web/Web.config
+++ b/Effigy/Effigy.Web/Web.config
@@ -22,8 +22,8 @@
     <add key="SMSPWD" value="1234567" />
     <add key="SMSSENDERID" value="WWWMIT" />
     <add key="SMSDOMAIN" value="smsby2.in" />
-    <add key="WEBSITENAME" value="https://www.traderzplanet.com"/>
-    <add key="HELPDESKNO" value="12345678"/>
+    <add key="WEBSITENAME" value="https://www.traderzplanet.in"/>
+    <add key="HELPDESKNO" value="8101022222"/>
     <add key="PaymentHours" value="2000"/>
     <add key="EncryptionValue" value="Effigy123"/>
     <add key="MERCHANT_KEY" value="PzRAQOI9"/>
