--- a/Effigy/Effigy.Web/Web.config
+++ b/Effigy/Effigy.Web/Web.config
@@ -31,7 +31,7 @@
     <add key="PAYU_BASE_URL" value="https://secure.payu.in"/>
     <add key="action" value="http://traderzplanet.in/Payment/PaymentSuccess.aspx"/>
     <add key="hashSequence" value="key|txnid|txtAmount|txtProductInfo|txtfirstName|txtEmail|txtUDF1|txtUDF2|txtUDF3|txtUDF4|txtUDF5|txtUDF6|txtUDF7|txtUDF8|txtUDF9|txtUDF10"/>
-    <add key="FromMailID" value="tridev1983@outlook.com" />
+    <add key="FromMailID" value="snplid@sunitanetwork.com" />
     <add key="ForgatPassword" value="Password Information" />
     <add key="WelcomeNote" value="Copy Paste User welcome email" />
     <add key="XMLPath" value="XMLFiles\CategoryRoleMapping.xml"/>
@@ -79,7 +79,7 @@
   </system.web>
   <system.net>
     <mailSettings>
-      <smtp from="tridev1983@outlook.com">
+     <smtp from="tridev1983@outlook.com">
         <!--<network host="125.210.189.244" password="" userName=""/>-->
         <network host="smtp-mail.outlook.com" userName="tridev1983@outlook.com" password="Tridev@1983" port="587"  />
       </smtp>
