--- a/Effigy/Effigy.Entity/App.Config
+++ b/Effigy/Effigy.Entity/App.Config
@@ -12,6 +12,6 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=SNPLCPDB;user id=sa;password=sa123$;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SASWATGUPTA-PC;initial catalog=SNPLCPDB;user id=sa;password=sa123$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
