--- a/Effigy/Effigy.Web/Effigy.Web.csproj
+++ b/Effigy/Effigy.Web/Effigy.Web.csproj
@@ -2358,6 +2358,8 @@
     <Content Include="Images\orderedList8.png" />
     <Content Include="Images\orderedList9.png" />
     <Content Include="Images\Spinner.gif" />
+    <Content Include="Images\tp_icon_Febicon.ico" />
+    <Content Include="Images\traderzPlanet.png" />
     <Content Include="Index.aspx" />
     <Content Include="Login.aspx" />
     <Content Include="LogOut.aspx" />
