update demo change

--- a/Effigy/Effigy.Web/Web.config
+++ b/Effigy/Effigy.Web/Web.config
@@ -21,7 +21,7 @@
     <add key="SMSUSERNAME" value="wwwmit" />
     <add key="SMSPWD" value="1234567" />
     <add key="SMSSENDERID" value="WWWMIT" />
-    <add key="SMSDOMAIN" value="smsby2.in" />
+    <add key="SMSDOMAIN" value="smsby2.in1" />
     <add key="WEBSITENAME" value="https://www.traderzplanet.in"/>
     <add key="HELPDESKNO" value="8101022222"/>
     <add key="PaymentHours" value="2000"/>
