--- a/Effigy/Effigy.Web/Effigy.Web.csproj
+++ b/Effigy/Effigy.Web/Effigy.Web.csproj
@@ -2322,6 +2322,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="CustomScript\ForgotPassword.js" />
+    <Content Include="CustomScript\UrlAudit.js" />
     <Content Include="CustomScript\URLEntry.js" />
     <Content Include="CustomScript\PaymentGetway.js" />
     <Content Include="CustomScript\UserListPage.js" />
