--- a/Effigy/Effigy.Web/Web.config
+++ b/Effigy/Effigy.Web/Web.config
@@ -11,8 +11,11 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <connectionStrings>
-    <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NitinJain;initial catalog=SNPLCPDB;user id=sa;password=sa123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SNPLCPDBConnection" connectionString="Data Source=NitinJain;Initial Catalog=SNPLCPDB;User ID=sa;Password=sa123;" providerName="System.Data.SqlClient" />
+    <!--<add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.169.157.14;initial catalog=SNPLCPDB;user id=snpluser;password=Welcome@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SNPLCPDBConnection" connectionString="Data Source=192.169.157.14;Initial Catalog=SNPLCPDB;User ID=snpluser;Password=Welcome@123;" providerName="System.Data.SqlClient" />-->
+    
+   <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SASWATGUPTA-PC;initial catalog=SNPLCPDB;user id=sa;password=sa123$;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SNPLCPDBConnection" connectionString="Data Source=SASWATGUPTA-PC;Initial Catalog=SNPLCPDB;User ID=sa;Password=sa123$;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <appSettings>
@@ -28,7 +31,7 @@
     <add key="EncryptionValue" value="Effigy123"/>
     <add key="MERCHANT_KEY" value="v7TrZ2RU"/>
     <add key="SALT" value="IukYqcV1Yw"/>
-  <add key="PAYU_BASE_URL" value="https://secure.payu.in"/>
+    <add key="PAYU_BASE_URL" value="https://secure.payu.in"/>
     <add key="action" value="http://traderzplanet.in/Payment/PaymentSuccess.aspx"/>
     <add key="hashSequence" value="key|txnid|txtAmount|txtProductInfo|txtfirstName|txtEmail|txtUDF1|txtUDF2|txtUDF3|txtUDF4|txtUDF5|txtUDF6|txtUDF7|txtUDF8|txtUDF9|txtUDF10"/>
     <add key="FromMailID" value="tridev1983@outlook.com" />
