--- a/Effigy/Effigy.Web/Web.config
+++ b/Effigy/Effigy.Web/Web.config
@@ -29,8 +29,8 @@
     <add key="HELPDESKNO" value="8101022222"/>
     <add key="PaymentHours" value="2000"/>
     <add key="EncryptionValue" value="Effigy123"/>
-    <add key="MERCHANT_KEY" value="v7TrZ2RU"/>
-    <add key="SALT" value="IukYqcV1Yw"/>
+    <add key="MERCHANT_KEY" value="PzRAQOI9"/>
+    <add key="SALT" value="eAh1nC6o3P"/>
     <add key="PAYU_BASE_URL" value="https://secure.payu.in"/>
     <add key="action" value="http://traderzplanet.in/Payment/PaymentSuccess.aspx"/>
     <add key="hashSequence" value="key|txnid|txtAmount|txtProductInfo|txtfirstName|txtEmail|txtUDF1|txtUDF2|txtUDF3|txtUDF4|txtUDF5|txtUDF6|txtUDF7|txtUDF8|txtUDF9|txtUDF10"/>
