--- a/Effigy/Effigy.Web/Web.config
+++ b/Effigy/Effigy.Web/Web.config
@@ -14,8 +14,8 @@
     <!--<add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.169.157.14;initial catalog=SNPLCPDB;user id=snpluser;password=Welcome@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="SNPLCPDBConnection" connectionString="Data Source=192.169.157.14;Initial Catalog=SNPLCPDB;User ID=snpluser;Password=Welcome@123;" providerName="System.Data.SqlClient" />-->
     
-   <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SASWATGUPTA-PC;initial catalog=SNPLCPDB;user id=sa;password=sa123$;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SNPLCPDBConnection" connectionString="Data Source=SASWATGUPTA-PC;Initial Catalog=SNPLCPDB;User ID=sa;Password=sa123$;" providerName="System.Data.SqlClient" />
+   <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Nitinjain;initial catalog=SNPLCPDB;user id=sa;password=sa123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SNPLCPDBConnection" connectionString="Data Source=Nitinjain;Initial Catalog=SNPLCPDB;User ID=sa;Password=sa123;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <appSettings>
