--- a/Effigy/Effigy.DataObject/Effigy.DataObject.csproj
+++ b/Effigy/Effigy.DataObject/Effigy.DataObject.csproj
@@ -20,7 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <IntermediateOutputPath>C:\Users\Varnika\AppData\Local\Temp\vs8F4B.tmp\Debug\</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\Users\SASWAT~1\AppData\Local\Temp\vs4E81.tmp\Debug\</IntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,7 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <IntermediateOutputPath>C:\Users\Varnika\AppData\Local\Temp\vs8F4B.tmp\Release\</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\Users\SASWAT~1\AppData\Local\Temp\vs4E81.tmp\Release\</IntermediateOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
