--- a/Effigy/Effigy.Service/Effigy.Service.csproj
+++ b/Effigy/Effigy.Service/Effigy.Service.csproj
@@ -20,7 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <IntermediateOutputPath>C:\Users\Varnika\AppData\Local\Temp\vs8F0C.tmp\Debug\</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\Users\SASWAT~1\AppData\Local\Temp\vsF7F1.tmp\Debug\</IntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,7 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <IntermediateOutputPath>C:\Users\Varnika\AppData\Local\Temp\vs8F0C.tmp\Release\</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\Users\SASWAT~1\AppData\Local\Temp\vsF7F1.tmp\Release\</IntermediateOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoMapper, Version=4.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
