--- a/Effigy/Effigy.Web/Web.config
+++ b/Effigy/Effigy.Web/Web.config
@@ -14,8 +14,8 @@
     <!--<add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.169.157.14;initial catalog=SNPLCPDB;user id=snpluser;password=Welcome@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="SNPLCPDBConnection" connectionString="Data Source=192.169.157.14;Initial Catalog=SNPLCPDB;User ID=snpluser;Password=Welcome@123;" providerName="System.Data.SqlClient" />-->
     
-   <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Nitinjain;initial catalog=SNPLCPDB;user id=sa;password=sa123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SNPLCPDBConnection" connectionString="Data Source=Nitinjain;Initial Catalog=SNPLCPDB;User ID=sa;Password=sa123;" providerName="System.Data.SqlClient" />
+   <add name="SNPLCPDBEntities" connectionString="metadata=res://*/DBContext.SNPLCPDB.csdl|res://*/DBContext.SNPLCPDB.ssdl|res://*/DBContext.SNPLCPDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SASWATGUPTA-PC;initial catalog=SNPLCPDB;user id=sa;password=sa123$;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SNPLCPDBConnection" connectionString="Data Source=SASWATGUPTA-PC;Initial Catalog=SNPLCPDB;User ID=sa;Password=sa123$;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <appSettings>
@@ -25,12 +25,14 @@
     <add key="SMSPWD" value="1234567" />
     <add key="SMSSENDERID" value="WWWMIT" />
     <add key="SMSDOMAIN" value="smsby2.in" />
-    <add key="WEBSITENAME" value="https://www.traderzplanet.in"/>
+    <add key="WEBSITENAME" value="http://localhost:3353"/>
     <add key="HELPDESKNO" value="8101022222"/>
     <add key="PaymentHours" value="2000"/>
     <add key="EncryptionValue" value="Effigy123"/>
     <add key="MERCHANT_KEY" value="PzRAQOI9"/>
     <add key="SALT" value="eAh1nC6o3P"/>
+    <add key="MarchantEmail" value="mail.nitinjain2012@gmail.com"/>
+    <add key="MarchantMobile" value="9810489652"/>
     <add key="PAYU_BASE_URL" value="https://secure.payu.in"/>
     <add key="action" value="http://traderzplanet.in/Payment/PaymentSuccess.aspx"/>
     <add key="hashSequence" value="key|txnid|txtAmount|txtProductInfo|txtfirstName|txtEmail|txtUDF1|txtUDF2|txtUDF3|txtUDF4|txtUDF5|txtUDF6|txtUDF7|txtUDF8|txtUDF9|txtUDF10"/>
